--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,4 @@
 NODE_ENV=DEVELOPMENT
-PORT=5005
+PORT=4000
 MONGO_URI="mongodb+srv://serversideauth:serversideauth@cluster0.fivsk.mongodb.net/?retryWrites=true&w=majority"
+key = "avhsyeutq15216335svaja"
