--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "serverside-authentication-using-node-js",
   "main": "server.js",
   "scripts": {
-    "start":"nodemon server.js"
+    "start": "nodemon server.js"
   },
   "author": "Alisha Gill",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "json": "^11.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "token": "^0.1.0",
+    "web": "^0.0.2"
   }
 }
